Todo app functional implemented
Implemented authorization without roles. Two guards set: First for not be able to access to todoes while not logged in, Second for not be able to go to sign-in page when you are authorized.

--- a/MyToDoApi/todo-app/src/app/todos/todos.component.html
+++ b/MyToDoApi/todo-app/src/app/todos/todos.component.html
@@ -12,3 +12,5 @@
       [todos]="todos"
     ></app-todo-list-footer>
   </section>
+  <!-- Sign out button -->
+<button (click)="doSignOut()">Sign out</button>
